# kamusi

./: .gitignore  README.md  create_index.js  create_kamusi.sql  justfile  kamusi.py  pyproject.toml  query_kamusi.py  requirements.txt
data/: failed_stream.jsonl  swahili-english-dict.json  swahili-english-dict.jsonl  word_indices.txt
doc/: dict_entry_sm.gv  gen_sm.gv  kamusi.qmd
docs/: index.html  manifest.json  serviceWorker.js
docs/js/: app.js
website/: serviceWorker.js
