[project]
name = "kamusi"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pdfquery>=0.4.3",
    "pypdf>=5.1.0",
    "python-statemachine>=2.5.0",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "toolz>=1.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "wat-inspector>=0.4.3",
]
